[gd_scene format=3 uid="uid://b7461x5pmcmke"]

[ext_resource type="Script" uid="uid://bna3r1u5vvd6w" path="res://src/ConveyorAssembly/path_following_conveyor_assembly.gd" id="1_ahro5"]
[ext_resource type="PackedScene" uid="uid://brxactpvi8y00" path="res://parts/PathFollowingConveyor.tscn" id="2_j1i1c"]
[ext_resource type="PackedScene" uid="uid://di5eqrm1i05k8" path="res://parts/assemblies/PathFollowingConveyorLegsAssembly.tscn" id="3_fifr3"]
[ext_resource type="PackedScene" uid="uid://tt6yn7v7ra60" path="res://parts/PathFollowingSideGuards.tscn" id="4_ahro5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_541io"]

[sub_resource type="Curve3D" id="Curve3D_fifr3"]
_data = {
"points": PackedVector3Array(0, 0, 0, 1, 0, 0, 0, -0.25, 0, -1, 0, 0, 1, 0, 0, 2.5, -0.25, 0, -1, 0, 0, 0, 0, 0, 5, -0.25, 0),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[node name="PathFollowingConveyorAssembly" type="Node3D" unique_id=250519520 node_paths=PackedStringArray("path_to_follow")]
process_mode = 3
script = ExtResource("1_ahro5")
path_to_follow = NodePath("Path3D")
conveyor_width = 1.524
belt_height = 0.5
belt_color = Color(1, 1, 1, 1)
belt_texture = 0
max_tilt_angle = 30.0
path_segments = 20
speed = 2.0
belt_physics_material = SubResource("PhysicsMaterial_541io")
enable_comms = false
speed_tag_group_name = "TagGroup0"
speed_tag_name = ""
running_tag_group_name = "TagGroup0"
running_tag_name = ""
metadata/_edit_group_ = null
metadata/hijack_scale = false

[node name="Path3D" type="Path3D" parent="." unique_id=1338018127]
curve = SubResource("Curve3D_fifr3")

[node name="PathFollowingConveyor" parent="." unique_id=576074511 node_paths=PackedStringArray("path_to_follow") instance=ExtResource("2_j1i1c")]
path_to_follow = NodePath("../Path3D")
belt_height = 0.5
path_segments = 20
belt_physics_material = SubResource("PhysicsMaterial_541io")

[node name="PathFollowingConveyorLegsAssembly" parent="PathFollowingConveyor" unique_id=577597572 instance=ExtResource("3_fifr3")]
unique_name_in_owner = true
middle_legs_enabled = true
_middle_legs_instance_count = 2

[node name="PathFollowingSideGuards" parent="." unique_id=1360240366 node_paths=PackedStringArray("conveyor") instance=ExtResource("4_ahro5")]
conveyor = NodePath("../PathFollowingConveyor")
size = Vector3(7.685, 3.53, 1)
